--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 .skill {
     margin: 2rem;
     align-items: center;
+    list-style-type: square;
 }
 
 .skills {
@@ -17,9 +18,15 @@
     margin: 3rem;
     float: left;
     width: 300px;
+    height: 300px;
+    background-color: rgb(192, 192, 192);
+}
+
+.column h4 {
+    text-align: center;
+    margin: 5px;
 }
 
 .subs {
-    margin-left: 1rem;
     list-style-type: square;
 }
