--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     margin: 3rem;
     float: left;
     width: 300px;
+    padding: 2px white;
     height: 300px;
     background-color: rgb(192, 192, 192);
 }
@@ -29,4 +30,11 @@
 
 .subs {
     list-style-type: square;
+}
+
+@media screen and (max-width: 900px) {
+    .column {
+        left: 100px;
+        text-align: left;
+    }
 }
