--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@
     list-style-type: square;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 960px) {
     .column {
-        text-align: left;
+        margin: 0;
+        padding: 0;
     }
 }
