--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     margin: 3rem;
     float: left;
     width: 300px;
-    padding: 2px white;
+    padding: 2px;
     height: 300px;
     background-color: rgb(192, 192, 192);
 }
@@ -36,6 +36,7 @@
     .column {
         margin: 0;
         padding: 3px;
+        border: honeydew;
     }
 }
 
