--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 
 @media screen and (max-width: 960px) {
     .column {
-        margin: 0;
+        margin: 2rem;
         padding: 3px;
         border: honeydew;
     }
