--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@
     color: black;
 }
 
-@media screen and (max-width: 1080px) {
+@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3) {
     .edukasi {
         margin: 0.5rem;
     }
