--- a/style.css
+++ b/style.css
@@ -29,12 +29,20 @@
 }
 
 .column {
-    margin: 3rem;
+    margin-top: 1rem;
+    margin-left: 4rem;
+    margin-right: 4rem;
+    margin-bottom: 2rem;
     float: left;
     width: 300px;
     padding: 2px;
     height: 300px;
     background-color: rgb(192, 192, 192);
+}
+
+.column:hover {
+    transform: scale(1.15);
+    transition: all ease 0.3s;
 }
 
 .column h4 {
@@ -51,6 +59,10 @@
         margin: 2rem;
         padding: 3px;
         border: honeydew;
+    }
+    .column:hover {
+        transform: scale(1.075);
+        transition: all ease 0.3s;
     }
     .skill {
         margin: 1.5rem;
@@ -78,5 +90,9 @@
     }
     .column {
         margin: 1rem;
+    }
+    .column:hover {
+        transform: scale(1.05);
+        transition: all ease 0.3s;
     }
 }
